--- a/alacritty.toml
+++ b/alacritty.toml
@@ -7,7 +7,7 @@ import = ["~/.config/alacritty/themes/themes/gruvbox_dark.toml"]
 size = 25
 
 [font.normal]
-family = "UbuntuMono Nerd Font"
+family = "JetBrainsMono Nerd Font"
 
 [window]
 decorations = "none"
