--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,6 +1,9 @@
 # themes from https://github.com/alacritty/alacritty-theme
 
-import = ["~/.config/alacritty/themes/themes/gruvbox_dark.toml"]
+# import = ["~/.config/alacritty/themes/themes/catppuccin_mocha.toml"]
+# import = ["~/.config/alacritty/themes/themes/catppuccin_latte.toml"]
+import = ["~/.config/alacritty/themes/themes/catppuccin_frappe.toml"]
+
 
 [font]
 size = 35
